fixed alignment of code elem

--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -1,5 +1,5 @@
 /*!
- * mockingbird misc.css 02/2017
+ * mockingbird misc.css 04/2017
  */
 
 code,
@@ -11,12 +11,13 @@ samp {
 
 code {
 	background-color: $code-bg;
+	display: inline;
 	color: $code-color;
-	font-size: $font-size-3;
+	font-size: .875em;
 	font-weight: normal;
 	vertical-align: middle;
 	padding: $spacer-2 $spacer-3;
-	margin: 0 $spacer-3;
+	margin: 0;
 	border-radius: $border-radius;
 }
 
